[package]
name = "export-setup-parameters"
version = "0.1.0"
authors = ["Neo Sun <neosun256@gmail.com>"]
edition = "2021"
description = "Export ark setup parameters from zcash"

[dependencies]
ark-ec = { version = '0.4.0', default-features = false }
ark-ff = { version = '0.4.0', default-features = false, features = [ "asm" ]  }
ark-poly = { version = '0.4.0', default-features = false }
ark-std = { version = '0.4.0', default-features = false }
ark-serialize = { version = '0.4.0', default-features = false }

num-bigint = "0.4"
text_io = "0.1.9"
rand = "0.8"
rayon = { version = "1", optional = true }

bincode = "1"
serde = { version = "1.0", features = ["derive"] }

[dependencies.ark-bn254]
package = "ark-bn254-mixed-radix"
git = "https://github.com/FindoraNetwork/ark-bn254-mixed-radix"
tag = "v0.4.0"
default-features = false
features = ["curve"]

[features]
default = ["std", "parallel"]
std = []
parallel = ["ark-ec/parallel", "ark-ff/parallel", "rayon"]
